--- a/css/fixed-nav-bar-footer.css
+++ b/css/fixed-nav-bar-footer.css
@@ -3,14 +3,14 @@ html {
   min-height: 100%;
 }
 body {
-  /*padding-top: 60px;*/
-  margin-bottom: 120px;
+  padding-top: 50px;
+  margin-bottom: 190px;
 }
 
 #cscs-body-container img {
   display: block;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
 }
 
 .footer {
@@ -18,7 +18,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 100px;
+  height: 170px;
   background-color: #f5f5f5;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -69,6 +69,7 @@ blockquote {
 
 .navbar {
   margin-bottom: 0px;
+  height: 50px;
 }
 
 /* modified from https://github.com/twbs/bootstrap/blob/94b4076dd2efba9af71f0b18d4ee4b163aa9e0dd/docs/assets/css/src/docs.css#L548-L601 */
@@ -77,7 +78,7 @@ blockquote {
 }
 
 .cscs-sidebar.affix {
-  margin-top: -80px;
+  margin-top: -0px;
 }
 
 .cscs-sidebar {
