--- a/css/fixed-nav-bar-footer.css
+++ b/css/fixed-nav-bar-footer.css
@@ -3,7 +3,7 @@ html {
   min-height: 100%;
 }
 body {
-  padding-top: 50px;
+  /*padding-top: 50px;*/
   margin-bottom: 190px;
 }
 
@@ -69,7 +69,7 @@ blockquote {
 
 .navbar {
   margin-bottom: 0px;
-  height: 50px;
+  /*height: 50px;*/
 }
 
 /* modified from https://github.com/twbs/bootstrap/blob/94b4076dd2efba9af71f0b18d4ee4b163aa9e0dd/docs/assets/css/src/docs.css#L548-L601 */
