--- a/unittests/resources/settings_unittests.tmpl
+++ b/unittests/resources/settings_unittests.tmpl
@@ -1,5 +1,5 @@
 #
-# Regression settings
+# ReFrame settings template for use in the unit tests
 #
 
 
@@ -14,7 +14,7 @@ class ReframeSettings:
             # Generic system used also in unit tests
             'generic': {{
                 'descr': 'Generic example system',
-                {nomod}'modules_system': '{modules_system}',
+                'modules_system': {modules_system},
 
                 # Adjust to your system's hostname
                 'hostnames': ['localhost'],
@@ -47,7 +47,7 @@ class ReframeSettings:
                 }}
             }}
         }},
-        'modes' : {{
+        'modes': {{
             '*': {{
                 'unittest': [
                     '-c', 'unittests/resources/hellocheck.py',
@@ -63,8 +63,8 @@ class ReframeSettings:
         'handlers': {{
             '{logfile}': {{
                 'level': 'DEBUG',
-                'format': '[%(asctime)s] %(levelname)s: '
-                        '%(check_name)s: %(message)s',
+                'format': ('[%(asctime)s] %(levelname)s: '
+                           '%(check_name)s: %(message)s'),
                 'datefmt': '%FT%T',
                 'append': False,
             }},
